--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work-Report</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="semantic/dist/semantic.min.css"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"
-    ></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-  </head>
-  <body>
-    <table class="ui celled table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Job</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td data-label="Name">James</td>
-          <td data-label="Age">24</td>
-          <td data-label="Job">Engineer</td>
-        </tr>
-        <tr>
-          <td data-label="Name">Jill</td>
-          <td data-label="Age">26</td>
-          <td data-label="Job">Engineer</td>
-        </tr>
-        <tr>
-          <td data-label="Name">Elyse</td>
-          <td data-label="Age">24</td>
-          <td data-label="Job">Designer</td>
-        </tr>
-      </tbody>
-    </table>
-    
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="container border shadow rounded mt-4">
+        <h3 class="text-center mt-4">Work Report February'24</h3>
+        <div class="m-4 table-responsive">
+            <table class="table table-bordered " style="border:3px solid lightblue;">
+                <thead>
+                    <th colspan="3" class="text-center table-primary">
+                        <p> Central Institute of Educational Technology, NCERT</br>
+                            (Progress Report)</br>
+                            (01-02-2024 to 29-02-2024)
+                        </p>
+                        <span><i>During the above period following progress has been made</i></span>
+                    </th>
+                    <tr class="table-primary">
+                        <th>Day</th>
+                        <th>Date</th>
+                        <th>Work Done</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>2/01/2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>2/02/2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
