--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container border shadow rounded mt-4">
+    <div class="container border shadow rounded mt-4 mb-4">
         <h3 class="text-center mt-4">Work Report February'24</h3>
         <div class="m-4 table-responsive">
             <table class="table table-bordered " style="border:3px solid lightblue;">
@@ -32,16 +32,158 @@
                 <tbody>
                     <tr>
                         <td>Thursday</td>
-                        <td>2/01/2024</td>
+                        <td>01 Feb 2024</td>
                         <td>During the above period following progress has been made:</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
-                        <td>2/02/2024</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Monday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Wednesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Monday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Wednesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Monday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Wednesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Saturday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Monday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr><tr>
+                        <td>Wednesday</td>
+                        <td>01 Feb 2024</td>
+                        <td>During the above period following progress has been made:</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>01 Feb 2024</td>
                         <td>During the above period following progress has been made:</td>
                     </tr>
                 </tbody>
             </table>
+            
+        </div>
+        <div class="container">
+            <div class="row m-3" >
+                <div class="col-md-6">
+                    <p><b>Submitted by</br>Name:</br>Post:</b></p>
+                </div>
+                <div class="col-md-6" align="right">
+                    <p><b>(Dr. Rejaul Karim)<br>
+                    कार्यक्रम समन्‍वयक Programme Coordinator<br>
+                    Head, DICT<br>
+                    अध्यक्ष, डी. आई. सी. टी.</b>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
