Added name and post

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="container">
             <div class="row m-3" >
                 <div class="col-md-6">
-                    <p><b>Submitted by</br>Name:</br>Post:</b></p>
+                    <p><b>Submitted by</br>Name: Geet Govind</br>Post: Programmer</b></p>
                 </div>
                 <div class="col-md-6" align="right">
                     <p><b>(Dr. Rejaul Karim)<br>
