edit name and post

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <table class="table table-bordered " style="border:3px solid lightblue;">
                 <thead>
                     <th colspan="3" class="text-center table-primary">
-                        <p> Central Institute of Educational Technology, NCERT</br>
+                        <!-- <p> Central Institute of Educational Technology, NCERT</br>
                             (Progress Report)</br>
                             (01-02-2024 to 29-02-2024)
-                        </p>
+                        </p> -->
                         <span><i>During the above period following progress has been made</i></span>
                     </th>
                     <tr class="table-primary">
@@ -174,15 +174,15 @@
         <div class="container">
             <div class="row m-3" >
                 <div class="col-md-6">
-                    <p><b>Submitted by</br>Name: Geet Govind</br>Post: Programmer</b></p>
+                    <p><b>Submitted by</br>Name: Deepak Kumar</br>Post: Content Developer (Technical)</b></p>
                 </div>
-                <div class="col-md-6" align="right">
+                <!-- <div class="col-md-6 text-end">
                     <p><b>(Dr. Rejaul Karim)<br>
                     कार्यक्रम समन्‍वयक Programme Coordinator<br>
                     Head, DICT<br>
                     अध्यक्ष, डी. आई. सी. टी.</b>
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
